[package]
name = "librcekunit"
version = "0.1.0"
edition = "2024"
authors = ["neuxdotdev <neuxdev1@gmail.com>"]
description = "Library dan contoh auth client"
license = "AGPL-3.0"
readme = "README.md"
[lib]
name = "librcekunit"
path = "src/lib.rs"
[[bin]]
name = "example-auth-implementation"
path = "example/auth/main.rs"
[dependencies]
chrono = "0.4.43"
clap = { version = "4.5.56", features = ["derive"] }
colored = "3.1.1"
directories = "6.0.0"
dirs = "6.0.0"
dotenv = "0.15.0"
dotenvy = "0.15.7"
env_logger = "0.11.8"
html5ever = "0.38.0"
log = "0.4.29"
mockito = "1.7.1"
once_cell = "1.21.3"
reqwest = { version = "0.13.1", features = ["json", "blocking", "gzip", "deflate", "brotli", "cookies", "multipart", "stream", "rustls-native-certs", "form"] }
rustc_version = "0.4.1"
scraper = "0.25.0"
select = "0.6.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.24.0"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full", "macros", "rt-multi-thread"] }
tracing = "0.1.44"

[dev-dependencies]
assert_cmd = "2.1.2"
clap = { version = "4.5.56", features = ["derive"] }
predicates = "3.1.3"
